// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service component render 1`] = `
<div
  className="container-fluid"
>
  <div
    className="row"
  >
    <div
      className="col-md-1 col-xs-1"
    >
      service
    </div>
    <div>
      <div
        className="col-md-2 col-xs-2"
      />
      <div
        className="col-md-2 col-xs-2"
      />
      <div
        className="col-md-2 col-xs-2"
      />
    </div>
  </div>
</div>
`;

exports[`load from state should load the state correctly 1`] = `
<div
  className="container-fluid"
>
  <div
    className="row"
  >
    <div
      className="col-md-1 col-xs-1"
    >
      gatekeeper
    </div>
    <div>
      <div
        className="col-md-2 col-xs-2"
      />
      <div
        className="col-md-2 col-xs-2"
      />
    </div>
  </div>
</div>
`;
